--- a/index.html
+++ b/index.html
@@ -3,25 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Let's Test Your JS Knowledge!</title>
 
+    <link rel="./script.js">
 <!--This is Bootstrap's CSS stylesheet-->
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
     crossorigin="anonymous">
-
-
 </head>
 <body>
 
+<!--Build a start button-->
+<div id="homePage">
+  <h1>Welcome!</h1>
+  <h6>This timed game will test your Javascript fundamentals knowledge.
+      Five (5) multiple choice questions will be shown and you will
+      be told whether your answer was right or wrong.
+      CAREFUL! A wrong answer will deduct 5 seconds off the timer.
+      When the timer reaches 0, the game will be over and you will
+      be able to submit your score onto the Highschore board!</h6>
+  <button type="button" class="btn btn-success">Start Game</button>
+</div>
+
+<!--Timer countdown-->
+<!--Present questions-->
+<!--Create buttons for answers-->
+<!--Start over button after game ends-->
+<!--Create a form or text input where to submit intials and score-->
 
 
 
 
 
-
-<!-- This is Bootstrap's JS and jQuery stylesheet-->
+    <!-- This is Bootstrap's JS and jQuery stylesheet-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous">
