--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's Test Your JS Knowledge!</title>
 
-    <link rel="./script.js">
+<!--My CSS stylesheet-->
+    <link rel="stylesheet" href="./style.css" />
+
 <!--This is Bootstrap's CSS stylesheet-->
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -14,8 +16,8 @@
 </head>
 <body>
 
-<!--Build a start button-->
-<div id="homePage">
+<!--Build a start button and welcome page-->
+<div class="homePage">
   <h1>Welcome!</h1>
   <h6>This timed game will test your Javascript fundamentals knowledge.
       Five (5) multiple choice questions will be shown and you will
@@ -45,6 +47,8 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous">
     </script>
-   
+
+    <!--My JS sheet-->
+    <script src="./script.js"></script>
 </body>
 </html>
