Added a nav bar to start the Highscores and Timer content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 </head>
 <body>
 
+<!--Created a nav bar for highscores link and timer placement-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">Navbar</a>
+  </div>
+</nav>
+
 <!--Build a start button and welcome page-->
 <div class="homePage">
   <h1>Welcome!</h1>
@@ -29,6 +36,7 @@
 </div>
 
 <!--Timer countdown-->
+
 <!--Present questions-->
 <!--Create buttons for answers-->
 <!--Start over button after game ends-->
