Added id to Start Game button to link to script.js

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <a class="nav-link" href="#"> </a>
         </li>
       </ul>
+<!--Timer Countdown-->
       <span class="navbar-text">
         Timer: 
       </span>
@@ -53,11 +54,10 @@
       When the timer reaches 0, the game will be over and you will
       be able to submit your score onto the Highschore board!
     </h6>
-    <button type="button" class="btn btn-success">Start Game </button>
+    <button type="button" id = "start" class="btn btn-success"> Start Game </button>
   </div>
 
 </div>
-<!--Timer countdown-->
 
 <!--Present questions-->
 <!--Create buttons for answers-->
