Added id to highscores nav bar to link to script.js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
  <!--Created a nav bar for highscores link and timer placement-->
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">View Highscores</a>
+    <a id="highscores" class="navbar-brand" href="#">View Highscores</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
