Added class=timer to link with script.js eventlistener to start timer when button is clicked

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </ul>
 <!--Timer Countdown-->
       <span class="navbar-text">
-        Timer: 
+        <h3 class="timer"> Timer: </h3> 
       </span>
     </div>
   </nav>
@@ -52,7 +52,7 @@
       be told whether your answer was right or wrong.
       CAREFUL! A wrong answer will deduct 5 seconds off the timer.
       When the timer reaches 0, the game will be over and you will
-      be able to submit your score onto the Highschore board!
+      be able to submit your score onto the Highscores board!
     </h6>
     <button type="button" id = "start" class="btn btn-success"> Start Game </button>
   </div>
