Added a div for the questions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </ul>
 <!--Timer Countdown-->
       <span class="navbar-text">
-        <h3 class="timer"> Timer: </h3> 
+        <h3 class="timer"> Timer: 50 seconds </h3> 
       </span>
     </div>
   </nav>
@@ -60,6 +60,7 @@
 </div>
 
 <!--Present questions-->
+<div class="questions"> </div>
 <!--Create buttons for answers-->
 <!--Start over button after game ends-->
 <!--Create a form or text input where to submit intials and score-->
