Added buttons for the answers, start over and for submitting info form

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
 <!--Present questions-->
 <div class="questions"> </div>
 <!--Create buttons for answers-->
+<div class="answers"> </div>
 <!--Start over button after game ends-->
+<div class="start-over"> </div>
 <!--Create a form or text input where to submit intials and score-->
+<div class="submit-initials"> </div>
 
     <!-- This is Bootstrap's JS and jQuery stylesheet-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -75,7 +78,9 @@
         crossorigin="anonymous">
     </script>
 
-    <!--My JS sheet-->
+    <!--My JS sheets-->
     <script src="./script.js"></script>
+    <script src="./questions.js" > </script>
+    <script src="./scores.js"> </script>  
 </body>
 </html>
