Added form for initials for highscore page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,23 @@
 <!--Start over button after game ends-->
 <div class="start-over"> </div>
 <!--Create a form or text input where to submit intials and score-->
-<div class="submit-initials"> </div>
+<div class="row">
+<div class="submit-initials">
+  <form>
+   <div class="form-group">
+      <label for="initialsForScore">Initials</label>
+      <input type="name" class="form-control" id="initials">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+</div>
 
     <!-- This is Bootstrap's JS and jQuery stylesheet-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
