--- a/index.html
+++ b/index.html
@@ -1,102 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Let's Test Your JS Knowledge!</title>
 
-<!--My CSS stylesheet-->
+    <!--My CSS stylesheet-->
     <link rel="stylesheet" href="./style.css" />
 
-<!--This is Bootstrap's CSS stylesheet-->
-    <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-    crossorigin="anonymous">
-</head>
+    <!--This is Bootstrap's CSS stylesheet-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
+    <!--Created a nav bar for highscores link and timer placement-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a id="highscores" class="navbar-brand" href="#">View Highscores</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarText"
+        aria-controls="navbarText"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">
+              <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"> </a>
+          </li>
+        </ul>
+        <!--Timer Countdown-->
+        <span class="navbar-text">
+          <h3 class="timer">Timer: 50 seconds</h3>
+        </span>
+      </div>
+    </nav>
+    <br>
 
-<div class="container"> 
-
- <!--Created a nav bar for highscores link and timer placement-->
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a id="highscores" class="navbar-brand" href="#">View Highscores</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">  <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> </a>
-        </li>
-      </ul>
-<!--Timer Countdown-->
-      <span class="navbar-text">
-        <h3 class="timer"> Timer: 50 seconds </h3> 
-      </span>
+    <!--Build a start button and welcome page-->
+    <div class="container card homePage text-center">
+      <div class="card-body">
+        <h1>Welcome!</h1>
+        <h6>
+          Let's test your Javascript fundamentals knowledge! You will be given
+          five (5) multiple choice questions and fifty (50) seconds to complete
+          the quiz. CAREFUL! A wrong answer will deduct 5 seconds off the timer.
+          When the timer reaches 0, the game will be over and you will be able
+          to submit your score onto the highscores board!
+        </h6>
+        <button type="button" id="start" class="btn btn-success">
+          Start Game
+        </button>
+      </div>
     </div>
-  </nav>
 
- <!--Build a start button and welcome page-->
-  <div class="homePage">
-   <h1>Welcome!</h1>
-    <h6>This timed game will test your Javascript fundamentals knowledge.
-      Five (5) multiple choice questions will be shown and you will
-      be told whether your answer was right or wrong.
-      CAREFUL! A wrong answer will deduct 5 seconds off the timer.
-      When the timer reaches 0, the game will be over and you will
-      be able to submit your score onto the Highscores board!
-    </h6>
-    <button type="button" id = "start" class="btn btn-success"> Start Game </button>
-  </div>
-
-</div>
-
-<!--Present questions-->
-<div class="questions"> </div>
-<!--Create buttons for answers-->
-<div class="answers"> </div>
-<!--Start over button after game ends-->
-<div class="start-over"> </div>
-<!--Create a form or text input where to submit intials and score-->
-<div class="row">
-<div class="submit-initials">
-  <form>
-   <div class="form-group">
-      <label for="initialsForScore">Initials</label>
-      <input type="name" class="form-control" id="initials">
+    <!--Present questions-->
+    <div class="container card text-center" id="quiz">
+      <div id="quizStatus"></div>
+      <button type="button" id="submit-answer" class="btn btn-success">
+        Start Game
+      </button>
     </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-</div>
-</div>
 
+    <!--Create a form or text input where to submit intials and score-->
+    <div class="container card submit-initials">
+      <div class="row">
+        <h3>Game Over!</h3>
+        <h6>
+          Please submit your initials and email address to be put on our
+          highscores board
+        </h6>
+        <form>
+          <div class="form-group">
+            <label for="initialsForScore">Initials</label>
+            <input type="name" class="form-control" id="initials" />
+          </div>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+            />
+            <small id="emailHelp" class="form-text text-muted"
+              >We'll never share your email with anyone else.</small
+            >
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+    <br>
     <!-- This is Bootstrap's JS and jQuery stylesheet-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous">
-    </script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
 
     <!--My JS sheets-->
     <script src="./script.js"></script>
-    <script src="./questions.js" > </script>
-    <script src="./scores.js"> </script>  
-</body>
+  </body>
 </html>
