--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h6>
           Let's test your Javascript fundamentals knowledge! You will be given
           five (5) multiple choice questions and fifty (50) seconds to complete
-          the quiz. CAREFUL! A wrong answer will deduct 5 seconds off the timer.
+          the quiz. CAREFUL! A wrong answer will deduct 10 seconds off the timer.
           When the timer reaches 0, the game will be over and you will be able
           to submit your score onto the highscores board!
         </h6>
@@ -73,10 +73,9 @@
 
     <!--Present questions-->
     <div class="container card text-center" id="quiz">
-      <div id="quizStatus"></div>
-      <button type="button" id="submit-answer" class="btn btn-success">
-        Start Game
-      </button>
+      <div id="quizStatus">
+        
+      </div>
     </div>
 
     <!--Create a form or text input where to submit intials and score-->
@@ -90,7 +89,11 @@
         <form>
           <div class="form-group">
             <label for="initialsForScore">Initials</label>
-            <input type="name" class="form-control" id="initials" />
+            <input type="name" 
+            class="form-control" 
+            id="initials" 
+            size="3"
+            >
           </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -99,13 +102,16 @@
               class="form-control"
               id="exampleInputEmail1"
               aria-describedby="emailHelp"
-            />
+              size="50"
+              maxlength="50"
+            >
             <small id="emailHelp" class="form-text text-muted"
               >We'll never share your email with anyone else.</small
             >
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <br>
       </div>
     </div>
     <br>
